updated for various functions - deletion too

--- a/precastr/Base.lproj/Main.storyboard
+++ b/precastr/Base.lproj/Main.storyboard
@@ -1551,6 +1551,51 @@
             </objects>
             <point key="canvasLocation" x="700" y="3120.9895052473767"/>
         </scene>
+        <!--Root View Controller-->
+        <scene sceneID="0BD-Hy-bzy">
+            <objects>
+                <tableViewController id="qzI-ik-ETw" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="lXb-x2-AQ3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="31B-RN-dab">
+                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="31B-RN-dab" id="ORT-K7-tK1">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="qzI-ik-ETw" id="zWr-oU-MuZ"/>
+                            <outlet property="delegate" destination="qzI-ik-ETw" id="bdZ-PQ-6lC"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="wrt-AT-N69"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yc5-8T-bdQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1497" y="3155"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="SrO-AX-SCL">
+            <objects>
+                <navigationController id="OJI-NL-73A" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="sKj-7e-l5m">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="qzI-ik-ETw" kind="relationship" relationship="rootViewController" id="wNa-B0-ZzC"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uOk-HD-hAo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2311" y="3005"/>
+        </scene>
         <!--Notifications-->
         <scene sceneID="k5e-f0-7LY">
             <objects>
@@ -1839,7 +1884,7 @@
         <segue reference="9cd-nP-F1L"/>
         <segue reference="NGY-dz-YZp"/>
         <segue reference="pyB-LE-lgF"/>
-        <segue reference="DWi-H9-wNK"/>
+        <segue reference="vqc-vD-fxp"/>
         <segue reference="tIc-7l-s1k"/>
     </inferredMetricsTieBreakers>
 </document>
